tests/paczka1/small_fuzzy/74624340.err
Error in line 6: HCAoINnzO A895 )8),7
Error in line 8: nAhxHo S92 88,17
Error in line 3: HCAoINnzO A895 87,8
Error in line 10: TYMQNwXB1QQ S92 54,3
Error in line 13: nAhxHo S92 -4,5
